.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Personal_development_plan__c.object
<CustomObject>
    <description>Records personal development plans for each employee</description>
    <fields>
        <fullName>xcdhcm__Activity_status__c</fullName>
        <label>Activity status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Development_activities__c</fullName>
        <label>Activities</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <formula>xcdhcm__Performance_review__r.xcdhcm__Employee_Details__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_comment__c</fullName>
        <label>Employee comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_leaving_date__c</fullName>
        <formula>xcdhcm__Performance_review__r.xcdhcm__Employee_leaving_date__c</formula>
        <label>Employee leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaver_before_data_retention_period__c</fullName>
        <formula>If( 
not(isblank( xcdhcm__Performance_review__r.xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c )), 
xcdhcm__Employee_leaving_date__c &lt; xcdhcm__Performance_review__r.xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c, 
xcdhcm__Employee_leaving_date__c &lt;  xcdhcm__Performance_review__r.xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__HMRC_data_retention_threshold__c 
)</formula>
        <label>Leaver before data retention period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Manager_comment__c</fullName>
        <label>Manager comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Performance_review__c</fullName>
        <label>Performance review</label>
        <referenceTo>xcdhcm__Employee_Review__c</referenceTo>
        <relationshipName>Personal_development_plan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Review_date__c</fullName>
        <formula>xcdhcm__Performance_review__r.xcdhcm__Date_Closed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review meeting date</label>
        <type>Date</type>
    </fields>
    <label>Personal Development Plan</label>
    <nameField>
        <label>Development goal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personal Development Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>